--- a/assets/css/components/layout.css
+++ b/assets/css/components/layout.css
@@ -1,9 +1,9 @@
-.about__container {
-  width: 50%;
-  height: 20vh;
+#about .container {
+  width: 70%;
+  height: 50%;
 }
 
-.about__portrait img {
-  height: 10%;
-  width: 10%;
+#about .portrait img {
+  height: 20em;
+  width: 20em;
 }
