--- a/assets/css/components/navbar.css
+++ b/assets/css/components/navbar.css
@@ -7,8 +7,52 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  min-height: 100%;
+  position: relative;
+}
+
 /* colours */
-.circle-portrait {
+body {
+  font-family: Open Sans, sans-serif;
+  font-weight: 400;
+  line-height: 1.45;
+}
+
+p {
+  font-family: Open Sans, sans-serif;
+  margin-bottom: 1.25em;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: Lato, sans-serif;
+  margin: 2.75rem 0 1rem;
+  font-weight: 400;
+  line-height: 1.15;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052em;
+}
+
+h2 {
+  font-size: 2.441em;
+}
+
+h3 {
+  font-size: 1.953em;
+}
+
+h4 {
+  font-size: 1.563em;
+}
+
+h5 {
+  font-size: 1.25em;
+}
+
+.circle {
   border-radius: 50%;
 }
 
@@ -50,12 +94,12 @@ html {
 
 #nav .logo {
   color: white;
-  font-size: 38px;
+  font-size: 3rem;
 }
 
 #nav .link {
   color: white;
-  font-size: 28px;
+  font-size: 1.5rem;
   padding: 0.5em 1em;
   display: block;
   text-align: center;
