--- a/assets/css/layout/layout.css
+++ b/assets/css/layout/layout.css
@@ -3,13 +3,15 @@
   margin: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
+html,
 body {
   min-height: 100%;
+  min-width: 100%;
   position: relative;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 /* colours */
@@ -83,47 +85,38 @@ h5 {
   float: right;
 }
 
-#header {
-  width: 100%;
-  height: 100vh;
-}
-
-#header .background {
-  width: 100%;
-  height: 100vh;
-  display: block;
-  position: relative;
-}
-
-#header .background::after {
-  content: "";
-  background-image: url(../imgs/header.jpg);
-  opacity: 0.65;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}
-
-#header .container {
+#about {
   text-align: center;
-  font-family: Lato, sans-serif;
-  color: white;
-  font-size: 3rem;
-  border-style: solid;
-  border-width: 0.5em;
-  border-color: white;
+  padding: 2em 0;
 }
 
-#header a.arrow-button {
-  bottom: 2em;
-  left: 50%;
-  z-index: 2;
-  position: absolute;
-  display: inline-block;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-decoration: none;
+#about .container {
+  display: flex;
+  width: 50em;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#about .container .information {
+  text-align: left;
+}
+
+#about .portrait {
+  height: 20em;
+  width: 20em;
+  margin-right: 2em;
+}
+
+#about h2 {
+  margin-top: 0;
+}
+
+#portfolio {
+  text-align: center;
+  background: #D4DCFF;
+}
+
+#portfolio .container {
+  padding-top: 10em;
+  padding-bottom: 10em;
 }
