--- a/assets/css/layout/navbar.css
+++ b/assets/css/layout/navbar.css
@@ -3,13 +3,15 @@
   margin: 0;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
+html,
 body {
   min-height: 100%;
+  min-width: 100%;
   position: relative;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 /* colours */
@@ -83,47 +85,48 @@ h5 {
   float: right;
 }
 
-#header {
-  width: 100%;
-  height: 100vh;
-}
-
-#header .background {
-  width: 100%;
-  height: 100vh;
-  display: block;
-  position: relative;
-}
-
-#header .background::after {
-  content: "";
-  background-image: url(../imgs/header.jpg);
-  opacity: 0.65;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}
-
-#header .container {
-  text-align: center;
+.navbar {
   font-family: Lato, sans-serif;
-  color: white;
-  font-size: 3rem;
-  border-style: solid;
-  border-width: 0.5em;
-  border-color: white;
+  background-color: black;
+  width: 100%;
+  position: fixed;
+  z-index: +3;
 }
 
-#header a.arrow-button {
-  bottom: 2em;
-  left: 50%;
-  z-index: 2;
-  position: absolute;
-  display: inline-block;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+.navbar .container {
+  margin-right: 1em;
+  margin-left: 2em;
+}
+
+.navbar .logo {
+  color: white;
+  font-size: 2em;
   text-decoration: none;
+}
+
+.navbar .logo:hover {
+  color: #0063B0;
+}
+
+.navbar .nav__item {
+  float: left;
+}
+
+.navbar .nav__item a {
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+  text-decoration: none;
+  padding: 0.5em 1em;
+  display: block;
+}
+
+.navbar .nav__item a:hover {
+  color: #0063B0;
+  background-color: #D4DCFF;
+}
+
+.nav {
+  list-style-type: none;
+  overflow: hidden;
 }
