--- a/assets/scss/base/_all.scss
+++ b/assets/scss/base/_all.scss
@@ -3,9 +3,17 @@
     margin: 0;
 }
 
+html, 
+body {
+    min-height: 100%;
+    min-width: 100%;
+    position: relative;
+}
+
 html {
     scroll-behavior: smooth;
 }
+
 
 @import "colors";
 @import "fonts";
