--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -1,9 +1,44 @@
 $primary-font: Lato, sans-serif;
 $secondary-font: Open Sans, sans-serif;
 
-$large-size: 38px;
-$medium-size: 28px;
-$small-size: 20px;
+$very-large-size: 4em;
+$slightly-large-size: 3em;
+$large-size: 2em;
+$medium-large-size: 1.5em; 
+$medium-size: 1em;
+$small-size: 0.5em;
 $thin-weight: 100;
 $medium-weight: 300;
 $thick-weight: 400;
+
+
+body {
+    font-family: $secondary-font;
+    font-weight: 400;
+    line-height: 1.45;
+  }
+
+p {
+    font-family: $secondary-font;
+    margin-bottom: 1.25em;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: $primary-font;
+    margin: 2.75rem 0 1rem;
+    font-weight: 400;
+    line-height: 1.15;
+  }
+
+h1 {
+    margin-top: 0;
+    font-size: 3.052em;
+  }
+  
+h2 {font-size: 2.441em;}
+
+h3 {font-size: 1.953em;}
+
+h4 {font-size: 1.563em;}
+
+h5 {font-size: 1.25em;}
