--- a/assets/scss/layout/header.scss
+++ b/assets/scss/layout/header.scss
@@ -7,6 +7,7 @@
     .background {
         width: 100%;
         height: 100vh;
+        
         display: block;
         position: relative;
       }
@@ -24,24 +25,35 @@
     }
 
     .container {
-        text-align: center;
         font-family: $primary-font;
         color: white;
-        font-size: $large-size;
+        text-align: center;
+
         border-style: solid;
         border-width: 0.5em;
         border-color: white;
+
+        .header__name {
+            margin: 0.5em;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
+        .header__title {
+            margin: 0.5em;
+        }
     }
 
     a.arrow-button{
         bottom: 2em;
-        left: 50%;
-        z-index: 2;
+        text-decoration: none;
+
         position: absolute;
         display: inline-block;
+        left: 50%;
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-        text-decoration: none;
+        z-index: 2;
     }
 }
 
