--- a/assets/css/layout/navbar.css
+++ b/assets/css/layout/navbar.css
@@ -3,11 +3,9 @@
   margin: 0;
 }
 
-html,
-body {
-  min-height: 100%;
-  min-width: 100%;
-  position: relative;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 html {
