--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,11 +3,9 @@
   margin: 0;
 }
 
-html,
-body {
-  min-height: 100%;
-  min-width: 100%;
-  position: relative;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 html {
@@ -90,11 +88,9 @@ h5 {
   margin: 0;
 }
 
-html,
-body {
-  min-height: 100%;
-  min-width: 100%;
-  position: relative;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 html {
@@ -245,11 +241,9 @@ a.arrow-button span:nth-of-type(3) {
   margin: 0;
 }
 
-html,
-body {
-  min-height: 100%;
-  min-width: 100%;
-  position: relative;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 html {
@@ -378,11 +372,9 @@ h5 {
   margin: 0;
 }
 
-html,
-body {
-  min-height: 100%;
-  min-width: 100%;
-  position: relative;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 html {
@@ -519,11 +511,9 @@ h5 {
   margin: 0;
 }
 
-html,
-body {
-  min-height: 100%;
-  min-width: 100%;
-  position: relative;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 html {
@@ -652,7 +642,6 @@ footer .right a {
   margin-left: 3px;
 }
 
-/* If you don't want the footer to be responsive, remove these media queries */
 @media (max-width: 600px) {
   .footer-distributed .footer-left,
   .footer-distributed .footer-right {
@@ -672,9 +661,6 @@ footer {
 }
 
 @media (max-height: 800px) {
-  footer {
-    position: static;
-  }
   header {
     padding-top: 40px;
   }
@@ -685,11 +671,9 @@ footer {
   margin: 0;
 }
 
-html,
-body {
-  min-height: 100%;
-  min-width: 100%;
-  position: relative;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 html {
