--- a/assets/css/layout/navbar.css
+++ b/assets/css/layout/navbar.css
@@ -1,130 +1,1 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-/* colours */
-body {
-  font-family: Open Sans, sans-serif;
-  font-weight: 400;
-  line-height: 1.45;
-}
-
-p {
-  font-family: Open Sans, sans-serif;
-  margin-bottom: 1.25em;
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: Lato, sans-serif;
-  margin: 2.75rem 0 1rem;
-  font-weight: 400;
-  line-height: 1.15;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 3.052em;
-}
-
-h2 {
-  font-size: 2.441em;
-}
-
-h3 {
-  font-size: 1.953em;
-}
-
-h4 {
-  font-size: 1.563em;
-}
-
-h5 {
-  font-size: 1.25em;
-}
-
-.circle {
-  border-radius: 50%;
-}
-
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.center-vertical {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.center-horizontal {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.left {
-  float: left;
-}
-
-.right {
-  float: right;
-}
-
-.navbar {
-  font-family: Lato, sans-serif;
-  background-color: black;
-  width: 100%;
-  position: fixed;
-  z-index: +3;
-}
-
-.navbar .container {
-  margin-right: 1em;
-  margin-left: 2em;
-}
-
-.navbar .logo {
-  color: white;
-  font-size: 2em;
-  text-decoration: none;
-}
-
-.navbar .logo:hover {
-  color: #0063B0;
-}
-
-.navbar .nav__item {
-  float: left;
-}
-
-.navbar .nav__item a {
-  color: white;
-  font-size: 1.5em;
-  text-align: center;
-  text-decoration: none;
-  padding: 0.5em 1em;
-  display: block;
-}
-
-.navbar .nav__item a:hover {
-  color: #0063B0;
-  background-color: #D4DCFF;
-}
-
-.nav {
-  list-style-type: none;
-  overflow: hidden;
-}
+*{padding:0;margin:0}html,body{height:100%;width:100%}html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;font-weight:400;line-height:1.45}p{font-family:Open Sans,sans-serif;margin-bottom:1.25em}h1,h2,h3,h4,h5{font-family:Lato,sans-serif;margin:2.75rem 0 1rem;font-weight:400;line-height:1.15}h1{margin-top:0;font-size:3.052em}h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.circle{border-radius:50%}.center{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.center-vertical{position:absolute;top:50%;transform:translateY(-50%)}.center-horizontal{position:absolute;left:50%;transform:translateX(-50%)}.left{float:left}.right{float:right}.navbar{font-family:Lato,sans-serif;background-color:black;width:100%;position:fixed;z-index:+3}.navbar .container{margin-right:1em;margin-left:2em}.navbar .logo{color:white;font-size:2em;text-decoration:none}.navbar .logo:hover{color:#0063B0}.navbar .nav__item{float:left}.navbar .nav__item a{color:white;font-size:1.5em;text-align:center;text-decoration:none;padding:0.5em 1em;display:block}.navbar .nav__item a:hover{color:#0063B0;background-color:#D4DCFF}.nav{list-style-type:none;overflow:hidden}
