--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,644 @@
-*{padding:0;margin:0}html,body{height:100%;width:100%}html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;font-weight:400;line-height:1.45}p{font-family:Open Sans,sans-serif;margin-bottom:1.25em}h1,h2,h3,h4,h5{font-family:Lato,sans-serif;margin:2.75rem 0 1rem;font-weight:400;line-height:1.15}h1{margin-top:0;font-size:3.052em}h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.circle{border-radius:50%}.center{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.center-vertical{position:absolute;top:50%;transform:translateY(-50%)}.center-horizontal{position:absolute;left:50%;transform:translateX(-50%)}.left{float:left}.right{float:right}*{padding:0;margin:0}html,body{height:100%;width:100%}html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;font-weight:400;line-height:1.45}p{font-family:Open Sans,sans-serif;margin-bottom:1.25em}h1,h2,h3,h4,h5{font-family:Lato,sans-serif;margin:2.75rem 0 1rem;font-weight:400;line-height:1.15}h1{margin-top:0;font-size:3.052em}h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.circle{border-radius:50%}.center{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.center-vertical{position:absolute;top:50%;transform:translateY(-50%)}.center-horizontal{position:absolute;left:50%;transform:translateX(-50%)}.left{float:left}.right{float:right}a.arrow-button{padding-top:80px;color:white;font-family:Lato,sans-serif;letter-spacing:.1em;text-decoration:none;transition:opacity .3s}a.arrow-button span{position:absolute;transform:translate(0, -50%);top:0;left:50%;width:36px;height:36px;margin-left:-18px;border-left:5px solid white;border-bottom:5px solid white;-webkit-transform:rotate(-45deg);transform:rotate(-45deg);-webkit-animation:sdb 2s infinite;animation:sdb 2s infinite;opacity:0;box-sizing:border-box}a.arrow-button span:nth-of-type(1){-webkit-animation-delay:0s;animation-delay:0s}a.arrow-button span:nth-of-type(2){top:16px;-webkit-animation-delay:.15s;animation-delay:.15s}a.arrow-button span:nth-of-type(3){top:32px;-webkit-animation-delay:.3s;animation-delay:.3s}@-webkit-keyframes sdb{0%{opacity:0}50%{opacity:1}100%{opacity:0}}@keyframes sdb{0%{opacity:0}50%{opacity:1}100%{opacity:0}}*{padding:0;margin:0}html,body{height:100%;width:100%}html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;font-weight:400;line-height:1.45}p{font-family:Open Sans,sans-serif;margin-bottom:1.25em}h1,h2,h3,h4,h5{font-family:Lato,sans-serif;margin:2.75rem 0 1rem;font-weight:400;line-height:1.15}h1{margin-top:0;font-size:3.052em}h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.circle{border-radius:50%}.center{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.center-vertical{position:absolute;top:50%;transform:translateY(-50%)}.center-horizontal{position:absolute;left:50%;transform:translateX(-50%)}.left{float:left}.right{float:right}.navbar{font-family:Lato,sans-serif;background-color:black;width:100%;position:fixed;z-index:+3}.navbar .container{margin-right:1em;margin-left:2em}.navbar .logo{color:white;font-size:2em;text-decoration:none}.navbar .logo:hover{color:#0063B0}.navbar .nav__item{float:left}.navbar .nav__item a{color:white;font-size:1.5em;text-align:center;text-decoration:none;padding:0.5em 1em;display:block}.navbar .nav__item a:hover{color:#0063B0;background-color:#D4DCFF}.nav{list-style-type:none;overflow:hidden}*{padding:0;margin:0}html,body{height:100%;width:100%}html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;font-weight:400;line-height:1.45}p{font-family:Open Sans,sans-serif;margin-bottom:1.25em}h1,h2,h3,h4,h5{font-family:Lato,sans-serif;margin:2.75rem 0 1rem;font-weight:400;line-height:1.15}h1{margin-top:0;font-size:3.052em}h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.circle{border-radius:50%}.center{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.center-vertical{position:absolute;top:50%;transform:translateY(-50%)}.center-horizontal{position:absolute;left:50%;transform:translateX(-50%)}.left{float:left}.right{float:right}#header{width:100%;height:100vh}#header .background{width:100%;height:100vh;display:block;position:relative}#header .background::after{content:"";background-image:url(../imgs/header.jpg);opacity:0.65;top:0;left:0;bottom:0;right:0;position:absolute;z-index:-1}#header .container{font-family:Lato,sans-serif;color:white;text-align:center;border-style:solid;border-width:0.5em;border-color:white}#header .container .header__name{margin:0.5em;margin-top:0;margin-bottom:0}#header .container .header__title{margin:0.5em}#header a.arrow-button{bottom:2em;text-decoration:none;position:absolute;display:inline-block;left:50%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%);z-index:2}*{padding:0;margin:0}html,body{height:100%;width:100%}html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;font-weight:400;line-height:1.45}p{font-family:Open Sans,sans-serif;margin-bottom:1.25em}h1,h2,h3,h4,h5{font-family:Lato,sans-serif;margin:2.75rem 0 1rem;font-weight:400;line-height:1.15}h1{margin-top:0;font-size:3.052em}h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.circle{border-radius:50%}.center{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.center-vertical{position:absolute;top:50%;transform:translateY(-50%)}.center-horizontal{position:absolute;left:50%;transform:translateX(-50%)}.left{float:left}.right{float:right}footer{background-color:#292c2f;box-shadow:0 1px 1px 0 rgba(0,0,0,0.12);box-sizing:border-box;width:100%;text-align:left;font:normal 16px sans-serif;padding:45px 50px}footer .left p{color:#8f9296;font-size:14px;margin:0}footer p.links{font-size:18px;font-weight:bold;color:#ffffff;margin:0 0 10px;padding:0}footer p.links a{display:inline-block;line-height:1.8;text-decoration:none;color:inherit}footer .right{float:right;margin-top:6px;max-width:180px}footer .right a{display:inline-block;width:35px;height:35px;background-color:#33383b;border-radius:2px;font-size:20px;color:#ffffff;text-align:center;line-height:35px;margin-left:3px}@media (max-width: 600px){.footer-distributed .footer-left,.footer-distributed .footer-right{text-align:center}.footer-distributed .footer-right{float:none;margin:0 auto 20px}.footer-distributed .footer-left p.footer-links{line-height:1.8}}footer{position:absolute}@media (max-height: 800px){header{padding-top:40px}}*{padding:0;margin:0}html,body{height:100%;width:100%}html{scroll-behavior:smooth}body{font-family:Open Sans,sans-serif;font-weight:400;line-height:1.45}p{font-family:Open Sans,sans-serif;margin-bottom:1.25em}h1,h2,h3,h4,h5{font-family:Lato,sans-serif;margin:2.75rem 0 1rem;font-weight:400;line-height:1.15}h1{margin-top:0;font-size:3.052em}h2{font-size:2.441em}h3{font-size:1.953em}h4{font-size:1.563em}h5{font-size:1.25em}.circle{border-radius:50%}.center{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%)}.center-vertical{position:absolute;top:50%;transform:translateY(-50%)}.center-horizontal{position:absolute;left:50%;transform:translateX(-50%)}.left{float:left}.right{float:right}#about{text-align:center;padding:2em 0}#about .container{display:flex;width:50em;margin-right:auto;margin-left:auto}#about .container .information{text-align:left}#about .portrait{height:20em;width:20em;margin-right:2em}#about h2{margin-top:0}#portfolio{text-align:center;background:#D4DCFF}#portfolio .container{padding-top:10em;padding-bottom:10em}
+/* colours */
+html {
+  scroll-behavior: smooth;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  outline: none;
+  background: none;
+  border: none;
+}
+
+body {
+  font-family: Open Sans, sans-serif;
+  font-weight: 400;
+  line-height: 1.45;
+}
+
+p {
+  font-family: Open Sans, sans-serif;
+  margin-bottom: 1.25em;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: Lato, sans-serif;
+  margin: 2.75rem 0 1rem;
+  font-weight: 400;
+  line-height: 1.15;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052em;
+}
+
+h2 {
+  font-size: 2.441em;
+}
+
+h3 {
+  font-size: 1.953em;
+}
+
+h4 {
+  font-size: 1.563em;
+}
+
+h5 {
+  font-size: 1.25em;
+}
+
+.navbar {
+  font-family: Lato, sans-serif;
+  background-color: black;
+  width: 100%;
+  position: fixed;
+  z-index: +3;
+}
+.navbar .navbar__container {
+  margin-right: 1em;
+  margin-left: 2em;
+}
+.navbar .navbar__logo {
+  color: white;
+  font-size: 2em;
+  text-decoration: none;
+}
+.navbar .navbar__logo:hover {
+  color: #0063B0;
+}
+.navbar .nav__item {
+  float: left;
+}
+.navbar .nav__item a {
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+  text-decoration: none;
+  padding: 0.5em 1em;
+  display: block;
+}
+.navbar .nav__item a:hover {
+  color: #0063B0;
+  background-color: #D4DCFF;
+}
+
+.nav {
+  list-style-type: none;
+  overflow: hidden;
+}
+
+#header {
+  width: 100%;
+  height: 100vh;
+}
+#header .background {
+  width: 100%;
+  height: 100vh;
+  display: block;
+  position: relative;
+}
+#header .background::after {
+  content: "";
+  background-image: url(../imgs/header.jpg);
+  opacity: 0.65;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+#header .container {
+  font-family: Lato, sans-serif;
+  color: white;
+  text-align: center;
+  border-style: solid;
+  border-width: 0.5em;
+  border-color: white;
+}
+#header .container .header__name {
+  margin: 0.5em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+#header .container .header__title {
+  margin: 0.5em;
+}
+#header a.arrow-button {
+  bottom: 2em;
+  text-decoration: none;
+  position: absolute;
+  display: inline-block;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+footer {
+  background-color: black;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 45px 50px;
+  /* Footer links */
+}
+footer .footer__left p {
+  color: #8f9296;
+  font-size: 14px;
+  margin: 0;
+}
+footer p.footer__links {
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffffff;
+  margin: 0 0 10px;
+  padding: 0;
+}
+footer p.footer__links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+footer .footer__right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+footer .footer__right a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+}
+
+@media (max-width: 600px) {
+  .footer__container .footer__left,
+  .footer__container .footer__right {
+    text-align: center;
+  }
+
+  .footer__container .footer__right {
+    float: none;
+    margin: 0 auto 20px;
+  }
+
+  .footer__container .footer__left p.footer__links {
+    line-height: 1.8;
+  }
+}
+footer {
+  position: absolute;
+}
+
+@media (max-height: 800px) {
+  header {
+    padding-top: 40px;
+  }
+}
+#about {
+  text-align: center;
+  padding: 2em 0;
+}
+#about .container {
+  display: flex;
+  width: 50em;
+  margin-right: auto;
+  margin-left: auto;
+}
+#about .container .information {
+  text-align: left;
+}
+#about .portrait {
+  height: 20em;
+  width: 20em;
+  margin-right: 2em;
+}
+#about h2 {
+  margin-top: 0;
+}
+
+#portfolio {
+  text-align: center;
+  background: #D4DCFF;
+}
+#portfolio .container {
+  padding-top: 10em;
+  padding-bottom: 10em;
+}
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  text-decoration: underline dotted;
+  /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+a.arrow-button {
+  padding-top: 80px;
+  color: white;
+  font-family: Lato, sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  transition: opacity .3s;
+}
+a.arrow-button span {
+  position: absolute;
+  transform: translate(0, -50%);
+  top: 0;
+  left: 50%;
+  width: 36px;
+  height: 36px;
+  margin-left: -18px;
+  border-left: 5px solid white;
+  border-bottom: 5px solid white;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb 2s infinite;
+  animation: sdb 2s infinite;
+  opacity: 0;
+  box-sizing: border-box;
+}
+a.arrow-button span:nth-of-type(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+a.arrow-button span:nth-of-type(2) {
+  top: 16px;
+  -webkit-animation-delay: .15s;
+  animation-delay: .15s;
+}
+a.arrow-button span:nth-of-type(3) {
+  top: 32px;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s;
+}
+
+@-webkit-keyframes sdb {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
