--- a/assets/scss/abstracts/_mixins.scss
+++ b/assets/scss/abstracts/_mixins.scss
@@ -1,30 +1,23 @@
-.center {
+@mixin circle {
+    border-radius: 50%;
+}
+
+@mixin center {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.center-vertical {
+@mixin center-vertical {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.center-horizontal {
+@mixin center-horizontal {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-}
-
-
-
-
-.left {
-    float: left;
-}
-
-.right {
-    float: right;
 }
 
