--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,246 +1,3 @@
-/* colours */
-html {
-  scroll-behavior: smooth;
-}
-
-ul {
-  list-style: none;
-}
-
-button {
-  outline: none;
-  background: none;
-  border: none;
-}
-
-body {
-  font-family: Open Sans, sans-serif;
-  font-weight: 400;
-  line-height: 1.45;
-}
-
-p {
-  font-family: Open Sans, sans-serif;
-  margin-bottom: 1.25em;
-}
-
-h1, h2, h3, h4, h5 {
-  font-family: Lato, sans-serif;
-  margin: 2.75rem 0 1rem;
-  font-weight: 400;
-  line-height: 1.15;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 3.052em;
-}
-
-h2 {
-  font-size: 2.441em;
-}
-
-h3 {
-  font-size: 1.953em;
-}
-
-h4 {
-  font-size: 1.563em;
-}
-
-h5 {
-  font-size: 1.25em;
-}
-
-.navbar {
-  font-family: Lato, sans-serif;
-  background-color: black;
-  width: 100%;
-  position: fixed;
-  z-index: +3;
-}
-.navbar .navbar__container {
-  margin-right: 1em;
-  margin-left: 2em;
-}
-.navbar .navbar__logo {
-  color: white;
-  font-size: 2em;
-  text-decoration: none;
-}
-.navbar .navbar__logo:hover {
-  color: #0063B0;
-}
-.navbar .nav__item {
-  float: left;
-}
-.navbar .nav__item a {
-  color: white;
-  font-size: 1.5em;
-  text-align: center;
-  text-decoration: none;
-  padding: 0.5em 1em;
-  display: block;
-}
-.navbar .nav__item a:hover {
-  color: #0063B0;
-  background-color: #D4DCFF;
-}
-
-.nav {
-  list-style-type: none;
-  overflow: hidden;
-}
-
-#header {
-  width: 100%;
-  height: 100vh;
-}
-#header .background {
-  width: 100%;
-  height: 100vh;
-  display: block;
-  position: relative;
-}
-#header .background::after {
-  content: "";
-  background-image: url(../imgs/header.jpg);
-  opacity: 0.65;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}
-#header .container {
-  font-family: Lato, sans-serif;
-  color: white;
-  text-align: center;
-  border-style: solid;
-  border-width: 0.5em;
-  border-color: white;
-}
-#header .container .header__name {
-  margin: 0.5em;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-#header .container .header__title {
-  margin: 0.5em;
-}
-#header a.arrow-button {
-  bottom: 2em;
-  text-decoration: none;
-  position: absolute;
-  display: inline-block;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 2;
-}
-
-footer {
-  background-color: black;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
-  width: 100%;
-  text-align: left;
-  font: normal 16px sans-serif;
-  padding: 45px 50px;
-  /* Footer links */
-}
-footer .footer__left p {
-  color: #8f9296;
-  font-size: 14px;
-  margin: 0;
-}
-footer p.footer__links {
-  font-size: 18px;
-  font-weight: bold;
-  color: #ffffff;
-  margin: 0 0 10px;
-  padding: 0;
-}
-footer p.footer__links a {
-  display: inline-block;
-  line-height: 1.8;
-  text-decoration: none;
-  color: inherit;
-}
-footer .footer__right {
-  float: right;
-  margin-top: 6px;
-  max-width: 180px;
-}
-footer .footer__right a {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  background-color: #33383b;
-  border-radius: 2px;
-  font-size: 20px;
-  color: #ffffff;
-  text-align: center;
-  line-height: 35px;
-  margin-left: 3px;
-}
-
-@media (max-width: 600px) {
-  .footer__container .footer__left,
-  .footer__container .footer__right {
-    text-align: center;
-  }
-
-  .footer__container .footer__right {
-    float: none;
-    margin: 0 auto 20px;
-  }
-
-  .footer__container .footer__left p.footer__links {
-    line-height: 1.8;
-  }
-}
-footer {
-  position: absolute;
-}
-
-@media (max-height: 800px) {
-  header {
-    padding-top: 40px;
-  }
-}
-#about {
-  text-align: center;
-  padding: 2em 0;
-}
-#about .container {
-  display: flex;
-  width: 50em;
-  margin-right: auto;
-  margin-left: auto;
-}
-#about .container .information {
-  text-align: left;
-}
-#about .portrait {
-  height: 20em;
-  width: 20em;
-  margin-right: 2em;
-}
-#about h2 {
-  margin-top: 0;
-}
-
-#portfolio {
-  text-align: center;
-  background: #D4DCFF;
-}
-#portfolio .container {
-  padding-top: 10em;
-  padding-bottom: 10em;
-}
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -580,65 +337,239 @@ template {
   display: none;
 }
 
-a.arrow-button {
-  padding-top: 80px;
-  color: white;
-  font-family: Lato, sans-serif;
-  letter-spacing: .1em;
-  text-decoration: none;
-  transition: opacity .3s;
-}
-a.arrow-button span {
-  position: absolute;
-  transform: translate(0, -50%);
-  top: 0;
-  left: 50%;
-  width: 36px;
-  height: 36px;
-  margin-left: -18px;
-  border-left: 5px solid white;
-  border-bottom: 5px solid white;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-animation: sdb 2s infinite;
-  animation: sdb 2s infinite;
-  opacity: 0;
-  box-sizing: border-box;
-}
-a.arrow-button span:nth-of-type(1) {
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
-}
-a.arrow-button span:nth-of-type(2) {
-  top: 16px;
-  -webkit-animation-delay: .15s;
-  animation-delay: .15s;
-}
-a.arrow-button span:nth-of-type(3) {
-  top: 32px;
-  -webkit-animation-delay: .3s;
-  animation-delay: .3s;
+/* colours */
+html {
+  scroll-behavior: smooth;
 }
 
-@-webkit-keyframes sdb {
-  0% {
-    opacity: 0;
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  outline: none;
+  background: none;
+  border: none;
+}
+
+body {
+  font-family: Open Sans, sans-serif;
+  font-weight: 200;
+  line-height: 1.45;
+}
+
+p {
+  font-family: Open Sans, sans-serif;
+  margin-bottom: 1.25em;
+  font-size: 16px;
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: Lato, sans-serif;
+  margin: 2.75rem 0 1rem;
+  font-weight: 200;
+  line-height: 1.15;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+h2 {
+  font-size: 50px;
+}
+
+h3 {
+  font-size: 40px;
+}
+
+h4 {
+  font-size: 30px;
+}
+
+h5 {
+  font-size: 25px;
+}
+
+.navbar {
+  transition: 0.2s;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: +3;
+}
+.navbar .container {
+  margin: 0 10em;
+  padding: 0.5em 0;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.navbar .container .navbar__brand {
+  margin-left: 20px;
+  float: left;
+  display: inline;
+}
+.navbar .container .navbar__brand .brand__item {
+  color: #0066ff;
+  font-size: 40px;
+  text-decoration: none;
+}
+.navbar .container .navbar__brand .brand__item:hover {
+  cursor: pointer;
+}
+.navbar .container .navbar__menu {
+  float: right;
+  display: inline;
+  list-style-type: none;
+  overflow: hidden;
+}
+.navbar .container .navbar__menu .menu__item {
+  float: left;
+  display: inline;
+  overflow: hidden;
+}
+.navbar .container .navbar__menu .menu__item a {
+  color: #293347;
+  font-size: 20px;
+  text-align: center;
+  text-decoration: none;
+  padding: 0.5em 1em;
+}
+.navbar .container .navbar__menu .menu__item a:hover {
+  color: #0066ff;
+}
+
+.scrolled {
+  background-color: #293347;
+}
+.scrolled .container .navbar__menu .menu__item a {
+  color: white;
+}
+
+.hero {
+  margin-top: 386px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.hero .container {
+  margin: 0 10em;
+  padding: 5em 0;
+  font-family: Lato, sans-serif;
+  color: #293347;
+  text-align: center;
+}
+.hero .container .subtitle {
+  margin-top: 0;
+}
+.hero .container .portrait {
+  margin: 2em 0;
+  border-radius: 50%;
+  height: 12em;
+  width: 12em;
+}
+
+footer {
+  background-color: black;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 45px 50px;
+  /* Footer links */
+}
+footer .footer__left p {
+  color: #8f9296;
+  font-size: 14px;
+  margin: 0;
+}
+footer p.footer__links {
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffffff;
+  margin: 0 0 10px;
+  padding: 0;
+}
+footer p.footer__links a {
+  display: inline-block;
+  line-height: 1.8;
+  text-decoration: none;
+  color: inherit;
+}
+footer .footer__right {
+  float: right;
+  margin-top: 6px;
+  max-width: 180px;
+}
+footer .footer__right a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  background-color: #33383b;
+  border-radius: 2px;
+  font-size: 20px;
+  color: #ffffff;
+  text-align: center;
+  line-height: 35px;
+  margin-left: 3px;
+}
+
+@media (max-width: 600px) {
+  .footer__container .footer__left,
+  .footer__container .footer__right {
+    text-align: center;
   }
-  50% {
-    opacity: 1;
+
+  .footer__container .footer__right {
+    float: none;
+    margin: 0 auto 20px;
   }
-  100% {
-    opacity: 0;
+
+  .footer__container .footer__left p.footer__links {
+    line-height: 1.8;
   }
 }
-@keyframes sdb {
-  0% {
-    opacity: 0;
+footer {
+  position: absolute;
+}
+
+@media (max-height: 800px) {
+  header {
+    padding-top: 40px;
   }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
+}
+#about {
+  text-align: center;
+  padding: 2em 0;
+}
+#about .container {
+  display: flex;
+  width: 50em;
+  margin-right: auto;
+  margin-left: auto;
+}
+#about .container .information {
+  text-align: left;
+}
+#about .portrait {
+  height: 20em;
+  width: 20em;
+  margin-right: 2em;
+}
+#about h2 {
+  margin-top: 0;
+}
+
+#portfolio {
+  text-align: center;
+}
+#portfolio .container {
+  padding-top: 10em;
+  padding-bottom: 10em;
 }
