--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -1,30 +1,28 @@
 body {
     font-family: $secondary-font;
-    font-weight: 400;
+    font-weight: 200;
     line-height: 1.45;
   }
 
 p {
     font-family: $secondary-font;
     margin-bottom: 1.25em;
+    font-size: 16px;
 }
 
 h1, h2, h3, h4, h5 {
     font-family: $primary-font;
     margin: 2.75rem 0 1rem;
-    font-weight: 400;
+    font-weight: 200;
     line-height: 1.15;
-  }
+}
 
-h1 {
-    margin-top: 0;
-    font-size: 3.052em;
-  }
+h1 {font-size: 60px;}
   
-h2 {font-size: 2.441em;}
+h2 {font-size: 50px;}
 
-h3 {font-size: 1.953em;}
+h3 {font-size: 40px;}
 
-h4 {font-size: 1.563em;}
+h4 {font-size: 30px;}
 
-h5 {font-size: 1.25em;}
+h5 {font-size: 25px;}
