--- a/styles/scss/layout/_footer.scss
+++ b/styles/scss/layout/_footer.scss
@@ -1,55 +1,53 @@
 footer {
-    background-color: black;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: normal 16px sans-serif;
-    padding: 45px 50px;
-    
-    
-    .footer__left p{
-    	color:  #8f9296;
-    	font-size: 14px;
-    	margin: 0;
-    }
-
-    /* Footer links */
-    p.footer__links{
-    	font-size:18px;
-    	font-weight: bold;
-    	color:  #ffffff;
-    	margin: 0 0 10px;
+  background-color: $secondary-color;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  text-align: left;
+  font: normal 16px sans-serif;
+  padding: 45px 50px;
+  
+  
+  .footer__left p{
+  	color:  #8f9296;
+  	font-size: 14px;
+  	margin: 0;
+  }
+  /* Footer links */
+  p.footer__links{
+  	font-size:18px;
+  	font-weight: bold;
+  	color:  #ffffff;
+  	margin: 0 0 10px;
 		padding: 0;
-		
-		a{
-			display:inline-block;
-			line-height: 1.8;
-			text-decoration: none;
-			color:  inherit;
-		}
-    }
+	}
 
-    .footer__right{
-    	float: right;
-    	margin-top: 6px;
+	a{
+		display:inline-block;
+		line-height: 1.8;
+		text-decoration: none;
+		color:  inherit;
+	}
+  .footer__right{
+  	float: right;
+  	margin-top: 6px;
 		max-width: 180px;
+	
 		a{
 			display: inline-block;
 			width: 35px;
 			height: 35px;
 			background-color:  #33383b;
 			border-radius: 2px;
-	
+		
 			font-size: 20px;
 			color: #ffffff;
 			text-align: center;
 			line-height: 35px;
-	
+		
 			margin-left: 3px;
 		}
-    }
-
+  }
 }    
 
 
@@ -75,6 +73,6 @@ footer{
     position: absolute;
 }
 
-@media (max-height:800px){
+@media (max-height:800px) {
 	header { padding-top:40px; }
 }
