--- a/styles/scss/layout/_navbar.scss
+++ b/styles/scss/layout/_navbar.scss
@@ -8,12 +8,9 @@
     z-index: 2;
 }
 
-.nav__inner {
-        
-}
-
 .brand {
     display: inline-block;
+    margin-left: 1em;
     @include element('name') {
         color: $primary-color;
         font-size: 40px;
@@ -24,43 +21,72 @@
     }
 }
 
-.nav__button {
-    color: $secondary-color;
-    font-size: 32px;
-    display: none;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 0;
-}
-
 .menu {
     display: inline-block;
-    float: right;
     overflow: hidden;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     right: 0;
-    .menu__link {
+
+    @include element('button') {
+        font-size: 32px;
+        display: none;
         color: $secondary-color;
-        font-size: 20px;
-        text-decoration: none;
-        padding: 0.5em 1em;
-        &:hover {
-            color: $primary-color;
+    }
+
+    .menu__items {
+        .menu__link {
+            color: $secondary-color;
+            font-size: 20px;
+            text-decoration: none;
+            padding: 0.5em 1em;
+            &:hover {
+                color: $primary-color;
+            }
         }
     }  
 }
     
+.sidebar {
+    display: none;
+    width: 0;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 3;
+    position: fixed;
+    background-color: $secondary-color;
+    transition: 0.5s;
+    overflow-x: hidden;
+    a {
+        display: block;
+        z-index: 4;
+        color: white;
+        text-decoration: none;
+        padding: 0.5em 1em;
+        &:hover {
+            color: $primary-color
+        }
+    }
+}
+
 //on scroll
 .nav--scrolled {
     background-color: $secondary-color;
     .nav__inner {
         .menu {
-            .menu__link {
+            .menu__button{
                 color: white; 
-            } 
+            }
+            .menu__items {
+                .menu__link {
+                    color: white;
+                    &:hover {
+                        color: $primary-color;
+                    }
+                }
+            }
         }
     }
 }
@@ -68,30 +94,23 @@
 @media screen and (max-width: 700px) {
     .nav {
         .nav__inner {
-            .nav__button {
-                display: inline-block;
-                float: right;
-            }
             .menu {
-                width: 0;
-                height: 100%;
-                left: 0;
-                top: 1;
-                z-index: 3;
-                position: fixed;
-                background-color: $secondary-color;
-                transition: 0.5s;
-                overflow-x: hidden;
-                a {
-                    display: block;
-                    z-index: 4;
-
-                    &:hover {
-                        color: $primary-color
-                    }
+                .menu__button {
+                    display: inline-block;
+                    float: right;
+                    margin-right: 0.5em;
                 }
+                .menu__items {
+                    display: none;
+                }
+                
             }   
+            .sidebar {
+                display: block
+            }
         }
     }
 }
+
+
 
